auto-test/tests/chapter_14/invalid_types/extra_credit/bitwise_lshift_pointer.c

int main(void) {
    int *ptr = 0;
    int i = 1000;
    i >> ptr;
    return 0;
}